patches/004_gateways/003_gateway_private.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: private-gateway
  namespace: ingress-gateways
spec:
  gatewayClassName: cilium
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: http
    port: 80
    protocol: HTTP
  - allowedRoutes:
      namespaces:
        from: All
    name: https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      
      # Gateway relies on SNI.
      # Below config only to satisfy the requirement of having at least one certificate reference
      certificateRefs:
      - name: non-existing-smotra-net-cert

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: ingress-gateways
spec:
  parentRefs:
  - name: private-gateway
    sectionName: http # Crucial: only attach to the HTTP listener
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /.well-known/acme-challenge/
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
